# oscClapHost

./: Cargo.toml  README.md  implementationPlan.md  surgeOSC.txt  test_per_note_mod.scd
src/: args.rs  device.rs  engine.rs  main.rs  osc.rs  plugin.rs
